--- a/public_source/index.html
+++ b/public_source/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <title>Reo.H.</title>
-    <link href="/css/main.css" rel="stylesheet" type="text/css">
+    <link href="/css/main.css" rel="stylesheet">
     <meta name='author' content='Reo Hakuta'>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
