--- a/public_source/index.html
+++ b/public_source/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <title>Reo.H.</title>
-    <link href="/css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
     <meta name='author' content='Reo Hakuta'>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
@@ -14,7 +14,7 @@
   <body>
 
     <template class='m-button'>
-      <link rel="stylesheet" href="/css/m-button.css" type="text/css">
+      <link rel="stylesheet" href="css/m-button.css" type="text/css">
       <content></content>
     </template>
 
