[IMPORTANT]FIX SCRIPT ON GULPFILE.JS

--- a/public_source/index.html
+++ b/public_source/index.html
@@ -35,7 +35,7 @@
 
     <script src="/js/tap.js"></script>
     <script src="/js/color.js"></script>
-    <script src="/js/sha512.js"></script>
+    <script src="/js/_sha512.js"></script>
     <script src="/js/script.js"></script>
   </body>
 
